/// Defines common types that may be used between proto messages
syntax = "proto3";
package state;

/// A cluster ID type
message ClusterId {
    string id = 1;
}

/// A peer ID in the libp2p format
message PeerId {
    string id = 1;
}

/// A UUID type
message ProtoUuid {
    /// The underlying string serialized UUID
    string value = 1;
}

/// Represents a `Scalar` type as used throughout the Renegade system
message ProtoScalar {
    /// The bytes underlying the serialization of the Scalar
    bytes value = 1;
}

/// Represents a `BigUint` serialized in little-endian order
message ProtoBigInt {
    /// The bytes underlying the serialization of the BigUint
    bytes value = 1;
}